<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.CreateAccountActivity">

    <ImageView
        android:id="@+id/loginActivityLogo"
        android:layout_width="206dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/mainactivitylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="238dp"
        android:layout_height="252dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="592dp"
        app:layout_constraintBottom_toBottomOf="@+id/dimLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityLogo"
        app:layout_constraintVertical_bias="0.24000001">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="65px"
            android:paddingRight="65px">

            <TextView
                android:id="@+id/createNewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create New Account"
                android:textAlignment="center"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="Email address"
                android:inputType="textWebEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtStreetAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Street Address"
                android:inputType="textPostalAddress"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:visibility="gone"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="City"
                android:inputType="textPostalAddress"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:visibility="gone"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/txtProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Province"
                android:inputType="textPostalAddress"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:visibility="gone"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/txtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="text|number"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:visibility="gone"
                android:background="@drawable/custom_edittext"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="168dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/colorAccent"
                    android:enabled="false"
                    android:onClick="createAccount"
                    android:text="Create New Account"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dimLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".45"
        android:background="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>