<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.LogInActivity">

    <TextView
        android:id="@+id/logInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Log In"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityLogo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Email"
        android:textColorHint="@color/colorSecondaryDark"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSecondaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInTextView"
        android:background="@drawable/custom_edittext" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="Password"
        android:textColorHint="@color/colorSecondaryDark"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:background="@drawable/custom_edittext"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorAccent"
        android:onClick="logIn"
        android:text="Log In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dimLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".45"
        android:background="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="238dp"
            android:layout_height="252dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorAccent"
        android:onClick="createAccount"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <ImageView
        android:id="@+id/loginActivityLogo"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mainactivitylogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>