...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <at.markushi.ui.CircleButton
        android:id="@+id/journalBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="toCreateGoal"
        android:src="@drawable/ic_mode_edit_black_24dp"
        app:cb_color="#D81B60"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <at.markushi.ui.CircleButton
        android:id="@+id/signOut"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:onClick="signOut"
        android:src="@drawable/ic_close_black_24dp"
...
